# babevm

./: .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md
docker/: Dockerfile.cpp-env-ubuntu32  Dockerfile.cpp-env-ubuntu64
docs/: build.md  class_loading.md  debugger.md  endian.md  faq.md  file_handling.md  garbage_collection.md  index.md  interpreter.md  jarfiles.md  limitations.md  longs.md  memory.md  native_interface.md  permissions.md  pools.md  portability.md  quickstart.md  stacks.md  threads.md  trycatch.md
docs/doxygen/html/: annotated.html  annotated_dup.js  ansi_2c_2pd__console_8c.html  ansi_2c_2pd__console_8c.js  ansi_2c_2pd__file_8c.html  ansi_2c_2pd__file_8c.js  ansi_2c_2pd__memory_8c.html  ansi_2c_2pd__memory_8c.js  babe_8c.html  babe_8c.js  bvm_8h.html  bvm_8h.js  bvm_8h_source.html  c_2debugger_2debugger-io-transport-sockets_8c.html  c_2debugger_2debugger-io-transport-sockets_8c.js  classes.html  clazz_8c.html  clazz_8c.js  clazz_8h.html  clazz_8h.js  clazz_8h_source.html  collector_8c.html  collector_8c.js  collector_8h.html  collector_8h.js  collector_8h_source.html  debugger-cmd-01-virtualmachine_8c.html  debugger-cmd-01-virtualmachine_8c.js  debugger-cmd-02-referencetype_8c.html  debugger-cmd-02-referencetype_8c.js  debugger-cmd-03-classtype_8c.html  debugger-cmd-03-classtype_8c.js  debugger-cmd-04-arraytype_8c.html  debugger-cmd-04-arraytype_8c.js  debugger-cmd-06-method_8c.html  debugger-cmd-06-method_8c.js  debugger-cmd-09-objectreference_8c.html  debugger-cmd-09-objectreference_8c.js  debugger-cmd-10-stringreference_8c.html  debugger-cmd-10-stringreference_8c.js  (+517 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+56 more)
lib/: HelloWorld.java
src/c/: babe.c  clazz.c  collector.c  exec.c  file.c  fp.c  frame.c  heap.c  int64.c  native.c  net.c  ni.c  object.c  pool_clazz.c  pool_internstring.c  pool_nativemethod.c  pool_utfstring.c  stacktrace.c  string.c  thread.c  trycatch.c  utfstring.c  vm.c  zip.c
src/c/debugger/: debugger-cmd-01-virtualmachine.c  debugger-cmd-02-referencetype.c  debugger-cmd-03-classtype.c  debugger-cmd-04-arraytype.c  debugger-cmd-06-method.c  debugger-cmd-09-objectreference.c  debugger-cmd-10-stringreference.c  debugger-cmd-11-threadreference.c  debugger-cmd-12-threadgroupreference.c  debugger-cmd-13-arrayreference.c  debugger-cmd-14-classloaderreference.c  debugger-cmd-15-eventrequest.c  debugger-cmd-16-stackframe.c  debugger-cmd-17-classobjectreference.c  debugger-cmd-64-event.c  debugger-id.c  debugger-io-inputstream.c  debugger-io-outputstream.c  debugger-io-transport-sockets.c  debugger-io.c  debugger-roots.c  debugger.c
src/h/: bvm.h  clazz.h  collector.h  define.h  exec.h  file.h  fp.h  frame.h  heap.h  int64.h  int64_emulated.h  native.h  net.h  ni-types.h  ni.h  object.h  platform-types.h  pool_clazz.h  pool_internstring.h  pool_nativemethod.h  pool_utfstring.h  stacktrace.h  string.h  thread.h  trycatch.h  utfstring.h  vm.h  zip.h
src/h/debugger/: debugger-commands.h  debugger-events.h  debugger-id.h  debugger-io-inputstream.h  debugger-io-outputstream.h  debugger-io-transport.h  debugger-io.h  debugger-jdwp.h  debugger-roots.h  debugger.h
src/h/pd/: pd.h  pd_console.h  pd_file.h  pd_memory.h  pd_sockets.h  pd_system.h
src/platform/ansi/c/: pd_console.c  pd_file.c  pd_memory.c
src/platform/hyc_t4200/c/: pd_console.c  pd_file.c  pd_memory.c  pd_system.c
src/platform/hyc_t4200/c/debugger/: debugger-io-transport-sockets.c
src/platform/hyc_t4200/h/: bvm_pd.h
src/platform/linux/c/: pd_system.c
src/platform/linux/h/: bvm_pd.h
src/platform/osx_ppc/c/: pd_system.c
src/platform/osx_ppc/h/: bvm_pd.h
src/platform/sockets/c/: pd_bsd_win_socket.c
src/platform/winos/c/: pd_system.c
src/platform/winos/h/: bvm_pd.h
